Director name truncation on small devices fixed

--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ a.collection-item:hover {
 
 
   .ml-10 {
-    margin-right: 3rem;
+    margin-right: 2rem;
   }
 
  }
